# argtea

./: Cargo.toml  README.md
src/: docs.rs  formatters.rs  help.rs  lib.rs  parse.rs  tests.rs
src/tests/: test_a.txt
